Initial portfolio layout

--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Kelly Munro | Nature and Wildlife Photographer</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href='http://fonts.googleapis.com/css?family=Lobster|Open+Sans:400,700' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  </head>
+  <body>
+    <header>
+      <a href="index.html" id="logo">
+        <h1>Kelly Munro</h1>
+        <h2>Nature and Wildlife Photographer</h2>
+      </a>
+      <nav>
+        <ul>
+          <li><a href="index.html" class="selected">Portfolio</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div id="wrapper">
+      <section>
+        <ul id="gallery">
+          <li>
+            <a href="img/Ducklings.jpg">
+              <img src="img/Ducklings.jpg" alt="">
+              <p>Mallard Ducklings, Anas platyrhynchos.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/MandarinDuck.jpg">
+              <img src="img/MandarinDuck.jpg" alt="">
+              <p>Mandarin Duck, Aix galericulata.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/GoatKid.jpg">
+              <img src="img/GoatKid.jpg" alt="">
+              <p>Arapawa Island Goat Kid - Capra aegagrus hircus</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/Seal.jpg">
+              <img src="img/Seal.jpg" alt="">
+              <p>New Zealand Fur Seal, Arctocephalus forsteri.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/BWRobin.jpg">
+              <img src="img/BWRobin.jpg" alt="">
+              <p>North Island Robin or Toutouwai, Petroica longipes.</p>
+            </a>
+          </li>
+          <li>
+            <a href="img/Ruapehu.jpg">
+              <img src="img/Ruapehu.jpg" alt="">
+              <p>Mount Ruapehu Snow</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <footer>
+        <p>&copy; 2015 Kelly Munro</p>
+      </footer>
+    </div>
+  </body>
+</html>
