Initial content for the About page

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
           <li>
             <a href="img/Ruapehu.jpg">
               <img src="img/Ruapehu.jpg" alt="">
-              <p>Mount Ruapehu Snow</p>
+              <p>Fresh snow on the slopes of Mount Ruapehu.</p>
             </a>
           </li>
         </ul>
       </section>
       <footer>
-        <p>&copy; 2015 Kelly Munro</p>
+        <p>Copyright &copy; 2015 <a href="mailto:info@kellymunro.com">Kelly Munro</a>. Images displayed on this site may not be used without written permission.</p>
       </footer>
     </div>
   </body>
