--- a/about.html
+++ b/about.html
@@ -25,12 +25,12 @@
     </header>
     <div id="wrapper">
       <section>
-        <img src="img/BWRobin.jpg" alt="New Zealand Robin" class="profile-photo">
+        <img src="img/squareRobin.jpg" alt="New Zealand Robin" class="profile-photo">
         <h3>About</h3>
         <p>Kelly Munro is a New Zealand based nature, wildlife and landscape photographer. She is a member of the Photographic Society of New Zealand (PSNZ) and the Kapiti Camera Club. Her work has featured in exhibitions in both New Zealand and Australia.</p>
 
         <h3>Exhibitions</h3>
-        <ul>
+        <ul id="exhibitions">
           <li>2015 - <a href="http://natex.psnzconvention2015.co.nz/">NATEX - Photographic Society of New Zealand National Exhibition</a> - Tauranga</li>
           <li>2013 - <a href="http://www.photospacegallery.com/2013---17-projects-group-show.html">17 Projects Group Show</a> - Photospace Gallery, Wellington</li>
           <li>2010 - <a href="https://www.canon.co.nz/sitecore/testing/Home/About-Canon/News-Events/Events/Photo5-Exhibition?sc_lang=en">Canon Photo5 Exhibition</a> - Carriageworks, Sydney, Australia</li>
