Add pages for each portfolio image

--- a/index.html
+++ b/index.html
@@ -27,37 +27,37 @@
       <section>
         <ul id="gallery">
           <li>
-            <a href="img/Ducklings.jpg">
+            <a href="ducklings.html">
               <img src="img/Ducklings.jpg" alt="">
               <p>Mallard Ducklings, Anas platyrhynchos.</p>
             </a>
           </li>
           <li>
-            <a href="img/MandarinDuck.jpg">
+            <a href="mandarinduck.html">
               <img src="img/MandarinDuck.jpg" alt="">
               <p>Mandarin Duck, Aix galericulata.</p>
             </a>
           </li>
           <li>
-            <a href="img/GoatKid.jpg">
+            <a href="goatkid.html">
               <img src="img/GoatKid.jpg" alt="">
-              <p>Arapawa Island Goat Kid - Capra aegagrus hircus</p>
+              <p>Arapawa Island Goat Kid - Capra aegagrus hircus.</p>
             </a>
           </li>
           <li>
-            <a href="img/Seal.jpg">
+            <a href="furseal.html">
               <img src="img/Seal.jpg" alt="">
               <p>New Zealand Fur Seal, Arctocephalus forsteri.</p>
             </a>
           </li>
           <li>
-            <a href="img/BWRobin.jpg">
+            <a href="robin.html">
               <img src="img/BWRobin.jpg" alt="">
               <p>North Island Robin or Toutouwai, Petroica longipes.</p>
             </a>
           </li>
           <li>
-            <a href="img/Ruapehu.jpg">
+            <a href="ruapehu.html">
               <img src="img/Ruapehu.jpg" alt="">
               <p>Fresh snow on the slopes of Mount Ruapehu.</p>
             </a>
