Updated portfolio images pages to only display as a single column on tablets

--- a/ducklings.html
+++ b/ducklings.html
@@ -24,10 +24,10 @@
       </nav>
     </header>
     <div id="wrapper">
-      <section id="primary">
+      <section id="photo">
         <img src="img/Ducklings.jpg" alt="">
       </section>
-      <section id="secondary">
+      <section id="content">
         <h3>Mallard Ducklings</h3>
         <ul class="description">
           <li>Scientific Name: Anas platyrhynchos</li>
