--- a/furseal.html
+++ b/furseal.html
@@ -24,10 +24,10 @@
       </nav>
     </header>
     <div id="wrapper">
-      <section id="primary">
+      <section id="photo">
         <img src="img/Seal.jpg" alt="">
       </section>
-      <section id="secondary">
+      <section id="content">
         <h3>New Zealand Fur Seal</h3>
         <ul class="description">
           <li>Scientific Name: Arctocephalus forsteri</li>
