--- a/goatkid.html
+++ b/goatkid.html
@@ -24,10 +24,10 @@
       </nav>
     </header>
     <div id="wrapper">
-      <section id="primary">
+      <section id="photo">
         <img src="img/GoatKid.jpg" alt="">
       </section>
-      <section id="secondary">
+      <section id="content">
         <h3>Arapawa Island Goat Kid</h3>
         <ul class="description">
           <li>Scientific Name: Capra aegagrus hircus</li>
