--- a/mandarinduck.html
+++ b/mandarinduck.html
@@ -24,10 +24,10 @@
       </nav>
     </header>
     <div id="wrapper">
-      <section id="primary">
+      <section id="photo">
         <img src="img/MandarinDuck.jpg" alt="">
       </section>
-      <section id="secondary">
+      <section id="content">
         <h3>Mandarin Duck, Male</h3>
         <ul class="description">
           <li>Scientific Name: Aix galericulata</li>
