--- a/ruapehu.html
+++ b/ruapehu.html
@@ -24,10 +24,10 @@
       </nav>
     </header>
     <div id="wrapper">
-      <section id="primary">
+      <section id="photo">
         <img src="img/Ruapehu.jpg" alt="">
       </section>
-      <section id="secondary">
+      <section id="content">
         <h3>Mount Ruapehu</h3>
         <ul class="description">
           <li>Location: Tongariro National Park</li>
