--- a/robin.html
+++ b/robin.html
@@ -24,10 +24,10 @@
       </nav>
     </header>
     <div id="wrapper">
-      <section id="primary">
+      <section id="photo">
         <img src="img/BWRobin.jpg" alt="">
       </section>
-      <section id="secondary">
+      <section id="content">
         <h3>North Island Robin</h3>
         <ul class="description">
           <li>Scientific Name: Petroica longipes</li>
