Update id name to be more specific for the photo pages

--- a/ducklings.html
+++ b/ducklings.html
@@ -27,7 +27,7 @@
       <section id="photo">
         <img src="img/Ducklings.jpg" alt="">
       </section>
-      <section id="content">
+      <section id="main-content">
         <h3>Mallard Ducklings</h3>
         <ul class="description">
           <li>Scientific Name: Anas platyrhynchos</li>
