--- a/furseal.html
+++ b/furseal.html
@@ -27,7 +27,7 @@
       <section id="photo">
         <img src="img/Seal.jpg" alt="">
       </section>
-      <section id="content">
+      <section id="main-content">
         <h3>New Zealand Fur Seal</h3>
         <ul class="description">
           <li>Scientific Name: Arctocephalus forsteri</li>
