--- a/goatkid.html
+++ b/goatkid.html
@@ -27,7 +27,7 @@
       <section id="photo">
         <img src="img/GoatKid.jpg" alt="">
       </section>
-      <section id="content">
+      <section id="main-content">
         <h3>Arapawa Island Goat Kid</h3>
         <ul class="description">
           <li>Scientific Name: Capra aegagrus hircus</li>
