--- a/mandarinduck.html
+++ b/mandarinduck.html
@@ -27,7 +27,7 @@
       <section id="photo">
         <img src="img/MandarinDuck.jpg" alt="">
       </section>
-      <section id="content">
+      <section id="main-content">
         <h3>Mandarin Duck, Male</h3>
         <ul class="description">
           <li>Scientific Name: Aix galericulata</li>
