--- a/robin.html
+++ b/robin.html
@@ -27,7 +27,7 @@
       <section id="photo">
         <img src="img/BWRobin.jpg" alt="">
       </section>
-      <section id="content">
+      <section id="main-content">
         <h3>North Island Robin</h3>
         <ul class="description">
           <li>Scientific Name: Petroica longipes</li>
