--- a/ruapehu.html
+++ b/ruapehu.html
@@ -27,7 +27,7 @@
       <section id="photo">
         <img src="img/Ruapehu.jpg" alt="">
       </section>
-      <section id="content">
+      <section id="main-content">
         <h3>Mount Ruapehu</h3>
         <ul class="description">
           <li>Location: Tongariro National Park</li>
