Added drop shadows for the gallery images and individual image pages

--- a/furseal.html
+++ b/furseal.html
@@ -25,7 +25,7 @@
     </header>
     <div id="wrapper">
       <section id="photo">
-        <img src="img/Seal.jpg" alt="">
+        <img src="img/Seal.jpg" alt="" class="portfolio-image">
       </section>
       <section id="main-content">
         <h3>New Zealand Fur Seal</h3>
