--- a/goatkid.html
+++ b/goatkid.html
@@ -25,7 +25,7 @@
     </header>
     <div id="wrapper">
       <section id="photo">
-        <img src="img/GoatKid.jpg" alt="">
+        <img src="img/GoatKid.jpg" alt="" class="portfolio-image">
       </section>
       <section id="main-content">
         <h3>Arapawa Island Goat Kid</h3>
