--- a/ducklings.html
+++ b/ducklings.html
@@ -25,7 +25,7 @@
     </header>
     <div id="wrapper">
       <section id="photo">
-        <img src="img/Ducklings.jpg" alt="">
+        <img src="img/Ducklings.jpg" alt="" class="portfolio-image">
       </section>
       <section id="main-content">
         <h3>Mallard Ducklings</h3>
