--- a/mandarinduck.html
+++ b/mandarinduck.html
@@ -25,7 +25,7 @@
     </header>
     <div id="wrapper">
       <section id="photo">
-        <img src="img/MandarinDuck.jpg" alt="">
+        <img src="img/MandarinDuck.jpg" alt="" class="portfolio-image">
       </section>
       <section id="main-content">
         <h3>Mandarin Duck, Male</h3>
