--- a/robin.html
+++ b/robin.html
@@ -25,7 +25,7 @@
     </header>
     <div id="wrapper">
       <section id="photo">
-        <img src="img/BWRobin.jpg" alt="">
+        <img src="img/BWRobin.jpg" alt="" class="portfolio-image">
       </section>
       <section id="main-content">
         <h3>North Island Robin</h3>
