--- a/ruapehu.html
+++ b/ruapehu.html
@@ -25,7 +25,7 @@
     </header>
     <div id="wrapper">
       <section id="photo">
-        <img src="img/Ruapehu.jpg" alt="">
+        <img src="img/Ruapehu.jpg" alt="" class="portfolio-image">
       </section>
       <section id="main-content">
         <h3>Mount Ruapehu</h3>
