Initial changes for lightbox

--- a/index.html
+++ b/index.html
@@ -27,38 +27,38 @@
       <section>
         <ul id="gallery">
           <li>
-            <a href="ducklings.html">
-              <img src="img/Ducklings.jpg" alt="">
+            <a href="img/Ducklings.jpg">
+              <img src="img/Ducklings.jpg" alt="Mallard Ducklings, Anas platyrhynchos.">
               <p>Mallard Ducklings, Anas platyrhynchos.</p>
             </a>
           </li>
           <li>
-            <a href="mandarinduck.html">
-              <img src="img/MandarinDuck.jpg" alt="">
+            <a href="img/MandarinDuck.jpg">
+              <img src="img/MandarinDuck.jpg" alt="Mandarin Duck, Aix galericulata.">
               <p>Mandarin Duck, Aix galericulata.</p>
             </a>
           </li>
           <li>
-            <a href="goatkid.html">
-              <img src="img/GoatKid.jpg" alt="">
+            <a href="img/GoatKid.jpg">
+              <img src="img/GoatKid.jpg" alt="Arapawa Island Goat Kid - Capra aegagrus hircus.">
               <p>Arapawa Island Goat Kid - Capra aegagrus hircus.</p>
             </a>
           </li>
           <li>
-            <a href="furseal.html">
-              <img src="img/Seal.jpg" alt="">
+            <a href="img/Seal.jpg">
+              <img src="img/Seal.jpg" alt="New Zealand Fur Seal, Arctocephalus forsteri.">
               <p>New Zealand Fur Seal, Arctocephalus forsteri.</p>
             </a>
           </li>
           <li>
-            <a href="robin.html">
-              <img src="img/BWRobin.jpg" alt="">
+            <a href="img/BWRobin.jpg">
+              <img src="img/BWRobin.jpg" alt="North Island Robin or Toutouwai, Petroica longipes.">
               <p>North Island Robin or Toutouwai, Petroica longipes.</p>
             </a>
           </li>
           <li>
-            <a href="ruapehu.html">
-              <img src="img/Ruapehu.jpg" alt="">
+            <a href="img/Ruapehu.jpg">
+              <img src="img/Ruapehu.jpg" alt="Mount Ruapehu, Tongariro National Park.">
               <p>Fresh snow on the slopes of Mount Ruapehu.</p>
             </a>
           </li>
@@ -68,5 +68,7 @@
         <p>Copyright &copy; 2015 <a href="mailto:info@kellymunro.com">Kelly Munro</a>. Images displayed on this site may not be used without written permission.</p>
       </footer>
     </div>
+    <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
