Updates to content

--- a/wildlife/index.html
+++ b/wildlife/index.html
@@ -22,7 +22,7 @@
 
 		<div class="primary-content">
 			<p class="intro">
-				Wellington is the southern most city in the North Island of New Zealand. It has been named "the coolest little capital in the world" by Lonely Planet.
+				Wellington is the southern most city in the North Island of New Zealand. It has been named "the coolest little capital in the world" by Lonely Planet. Many wildlife species call the Wellington region home.
 			</p>
 
       <div class="wildlife">
@@ -68,6 +68,7 @@
         <ul>
           <li><a href="http://www.forestandbird.org.nz/what-we-do/reserves/pauatahanui">Pauatahanui Wildlife Reserve</a> - the tidal mud-flats and regenerating scrub land are home to several local and migratory birds. Species include pied stilts, royal spoonbills, kingfishers, pukekos, black shag, capsian tern, bar-tailed godwit, white faced heron, paradise shelduck.</li>
           <li><a href = "http://www.doc.govt.nz/parks-and-recreation/places-to-go/wellington-kapiti/places/waikanae-area/waikanae-estuary/">Waikanae Estuary</a> - species include variable oystercatchers, white-fronted terns, shags, gulls.</li>
+          <li>Further afield - Foxton Estuary, approximately 2 hours drive north of Wellington, has one of the widest ranges of wading and shore birds in New Zealand. A total of 95 species have been identified there.</li>
         </ul>
         <div class="to-top">
           <a href="#top">Back to top &raquo;</a>
@@ -85,8 +86,9 @@
       </div>
       <div class="right">
         <ul>
-          <li><a href="http://wellington.govt.nz/recreation/enjoy-the-outdoors/beaches-and-coast/southern-suburbs/sinclair-head-te-rimurapa">Sinclair Head (Te Rimurapa)</a> - up to 150 NZ Fur Seals come ashore between May and August to rest and feed.</li>
+          <li><a href="http://wellington.govt.nz/recreation/enjoy-the-outdoors/beaches-and-coast/southern-suburbs/sinclair-head-te-rimurapa">Sinclair Head (Te Rimurapa)</a> - up to 150 NZ Fur Seals come ashore between May and August to rest and feed. This colony contains male seals only.</li>
           <li><a href="http://www.newzealand.com/int/feature/cape-palliser/">Cape Palliser</a> - located on the Wairarapa Coast, Cape Palliser is home to the North Island's largest seal colony. Breeding season is from November to January.</li>
+          <li>Further afield - if you're heading over to Picton on the ferry, there are several seal colonies in the Marlborough Sounds, where they like to hang out around the salmon farms, and along the Kaikoura coastline.</li>
         </ul>
         <div class="to-top">
           <a href="#top">Back to top &raquo;</a>
