--- a/wildlife/index.html
+++ b/wildlife/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Wildlife Watching | Wellington, New Zealand</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link href='http://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
