Update image alt text and remove unused css

--- a/wildlife/index.html
+++ b/wildlife/index.html
@@ -38,7 +38,7 @@
 
 		<div id="forest-birds" class="secondary-content t-border group">
       <div class="left">
-        <img src="img/kakariki.jpg" alt="Kakariki">
+        <img src="img/kakariki.jpg" alt="Kakariki at Zealandia Ecosanctuary">
         <h3>Forest Birds</h3>
         <p>
           There are several places near Wellington to see forest birds.
@@ -59,7 +59,7 @@
 
     <div id="sea-birds" class="secondary-content group">
       <div class="left">
-        <img src="img/piedstilts.jpg" alt="Pied Stilts">
+        <img src="img/piedstilts.jpg" alt="Pied Stilts at Pauatahanui Wildlife Reserve">
         <h3>Sea Birds</h3>
         <p>
           Red-billed gulls and black-backed gulls are found throughout the city, including along the waterfront in the CBD. Heading north from the city, there are two large wetland areas that are home to sea birds.
@@ -79,7 +79,7 @@
 
     <div id="seals" class="secondary-content group">
       <div class="left">
-        <img src="img/seal.jpg" alt="New Zealand Fur Seal">
+        <img src="img/seal.jpg" alt="New Zealand Fur Seal in the Marlborough Sounds">
         <h3>Seals</h3>
         <p>
           New Zealand Fur Seals (Kekeno) are found along the coastline of New Zealand. There is a large male only seal colony at Sinclair Head (Te Rimurapa) near Red Rocks on Wellington's south coast.
@@ -99,7 +99,7 @@
 
     <div id="exotic-wildlife" class="secondary-content group">
       <div class="left">
-        <img src="img/lioness.jpg" alt="Lioness">
+        <img src="img/lioness.jpg" alt="Lioness at Wellington Zoo">
         <h3>Exotic Wildlife</h3>
         <p>
           Zoos and wildlife parks around the Wellington region are home to both native, introduced and exotic species.
