Consolidated css for h2 and h3 headings. Updated descriptions for sea birds

--- a/wildlife/index.html
+++ b/wildlife/index.html
@@ -67,8 +67,8 @@
       </div>
       <div class="right">
         <ul>
-          <li><a href="http://www.forestandbird.org.nz/what-we-do/reserves/pauatahanui">Pauatahanui Wildlife Reserve</a> - the tidal mud-flats and regenerating scrub land are home to several local and migratory birds. Species include pied stilts, royal spoonbills, kingfishers, pukekos, black shag, capsian tern, bar-tailed godwit, white faced heron, paradise shelduck.</li>
-          <li><a href = "http://www.doc.govt.nz/parks-and-recreation/places-to-go/wellington-kapiti/places/waikanae-area/waikanae-estuary/">Waikanae Estuary</a> - species include variable oystercatchers, white-fronted terns, shags, gulls.</li>
+          <li><a href="http://www.forestandbird.org.nz/what-we-do/reserves/pauatahanui">Pauatahanui Wildlife Reserve</a> - the tidal mud-flats and regenerating scrub land are home to several local and migratory birds. Species include pied stilts, royal spoonbills, kingfishers, pukekos, black shags, capsian terns, bar-tailed godwits, white faced herons and paradise shelducks.</li>
+          <li><a href = "http://www.doc.govt.nz/parks-and-recreation/places-to-go/wellington-kapiti/places/waikanae-area/waikanae-estuary/">Waikanae Estuary</a> - a breeding ground for more than 60 species of bird, including white-fronted terns, shags, gulls, banded dotterels, pukekos, dabchicks and variable oystercatchers.</li>
           <li>Further afield - Foxton Estuary, approximately 2 hours drive north of Wellington, has one of the widest ranges of wading and shore birds in New Zealand. A total of 95 species have been identified there.</li>
         </ul>
         <div class="to-top">
