Rename css class to better reflect the content

--- a/wildlife/index.html
+++ b/wildlife/index.html
@@ -36,7 +36,7 @@
 
 		</div>
 
-		<div id="forest-birds" class="secondary-content t-border group">
+		<div id="forest-birds" class="wildlife-types t-border group">
       <div class="left">
         <img src="img/kakariki.jpg" alt="Kakariki at Zealandia Ecosanctuary">
         <h3>Forest Birds</h3>
@@ -57,7 +57,7 @@
       </div>
     </div>
 
-    <div id="sea-birds" class="secondary-content group">
+    <div id="sea-birds" class="wildlife-types group">
       <div class="left">
         <img src="img/piedstilts.jpg" alt="Pied Stilts at Pauatahanui Wildlife Reserve">
         <h3>Sea Birds</h3>
@@ -77,7 +77,7 @@
       </div>
 		</div>
 
-    <div id="seals" class="secondary-content group">
+    <div id="seals" class="wildlife-types group">
       <div class="left">
         <img src="img/seal.jpg" alt="New Zealand Fur Seal in the Marlborough Sounds">
         <h3>Seals</h3>
@@ -97,7 +97,7 @@
       </div>
     </div>
 
-    <div id="exotic-wildlife" class="secondary-content group">
+    <div id="exotic-wildlife" class="wildlife-types group">
       <div class="left">
         <img src="img/lioness.jpg" alt="Lioness at Wellington Zoo">
         <h3>Exotic Wildlife</h3>
