Update wildlife watching intro text

--- a/wildlife/index.html
+++ b/wildlife/index.html
@@ -23,16 +23,8 @@
 
 		<div class="primary-content">
 			<p class="intro">
-				Wellington is the southern most city in the North Island of New Zealand. It has been named "the coolest little capital in the world" by Lonely Planet. Many wildlife species call the Wellington region home.
+				Wellington is the southern most city in the North Island of New Zealand. Despite being a large urban centre, there are several places close to the city that make for great wildlife and bird watching.
 			</p>
-
-      <div class="wildlife">
-        <h2>Wildlife and the City...</h2>
-        <p>
-          Despite being a large urban centre, there are several places close to Wellington city that make for great wildlife and bird watching:
-          from zoos and predator-fenced bird sanctuaries to wildlife reserves and seal colonies.
-        </p>
-      </div>
 
 		</div>
 
