--- a/index.html
+++ b/index.html
@@ -2,73 +2,63 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Kelly Munro | Nature and Wildlife Photographer</title>
+    <title>Kelly Munro | Web Developer | Photographer</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link href='https://fonts.googleapis.com/css?family=Lobster%7COpen+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link href='http://fonts.googleapis.com/css?family=Dosis|Josefin+Sans|Lobster' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/app.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
+
   <body>
     <header>
-      <a href="index.html" id="logo">
         <h1>Kelly Munro</h1>
-        <h2>Nature and Wildlife Photographer</h2>
-      </a>
-      <nav>
-        <ul>
-          <li><a href="index.html" class="selected">Portfolio</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
+        <h2>Web Developer | Photographer</h2>
     </header>
-    <div id="wrapper">
-      <section>
-        <ul id="gallery">
-          <li>
-            <a href="img/Ducklings.jpg">
-              <img src="img/Ducklings.jpg" alt="Mallard Ducklings, Anas platyrhynchos.">
-              <p>Mallard Ducklings, Anas platyrhynchos.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/MandarinDuck.jpg">
-              <img src="img/MandarinDuck.jpg" alt="Mandarin Duck, Aix galericulata.">
-              <p>Mandarin Duck, Aix galericulata.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/GoatKid.jpg">
-              <img src="img/GoatKid.jpg" alt="Arapawa Island Goat Kid - Capra aegagrus hircus.">
-              <p>Arapawa Island Goat Kid - Capra aegagrus hircus.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/Seal.jpg">
-              <img src="img/Seal.jpg" alt="New Zealand Fur Seal, Arctocephalus forsteri.">
-              <p>New Zealand Fur Seal, Arctocephalus forsteri.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/BWRobin.jpg">
-              <img src="img/BWRobin.jpg" alt="North Island Robin or Toutouwai, Petroica longipes.">
-              <p>North Island Robin or Toutouwai, Petroica longipes.</p>
-            </a>
-          </li>
-          <li>
-            <a href="img/Ruapehu.jpg">
-              <img src="img/Ruapehu.jpg" alt="Mount Ruapehu, Tongariro National Park.">
-              <p>Fresh snow on the slopes of Mount Ruapehu.</p>
-            </a>
-          </li>
-        </ul>
+
+    <div id="content">
+      <section class="site clearfix">
+        <a href="img/photography-site.jpg">
+          <img src="img/photography-site.jpg" alt="Photography site - Javascript, jQuery, jQuery UI, Ruby on Rails">
+        </a>
+        <div class="site-description">
+          <h3>Kelly Munro Photography</h3>
+          <p>An interactive photography portfolio site</p>
+          <p>Javascript, jQuery, jQuery UI, Ruby on Rails, RSpec testing, Jasmine testing</p>
+          <p>Github: <a href="https://github.com/kellymdev/photo-site">Github repository</a></p>
+          <p>Visit the site: <a href="http://www.kellymunro.com">Kelly Munro Photography</a></p>
+        </div>
       </section>
+
+      <section class="site clearfix">
+        <a href="img/acronyms.jpg">
+          <img src="img/acronyms.jpg" alt="IT Acronyms - Ruby on Rails">
+        </a>
+        <div class="site-description">
+          <h3>IT Acronyms</h3>
+          <p>A searchable list of IT acronyms and their definitions</p>
+          <p>Ruby on Rails, RSpec testing, Capybara testing</p>
+          <p>Github: <a href="https://github.com/kellymdev/it-acronyms">Github repository</a></p>
+          <p>Visit the site: <a href="https://acronyms.herokuapp.com/">IT Acronyms</a></p>
+        </div>
+      </section>
+
+      <section class="site clearfix">
+        <a href="img/wildlife.jpg">
+          <img src="img/wildlife.jpg" alt="Wildlife site - Html, CSS, single page app">
+        </a>
+        <div class="site-description">
+          <h3>Wellington Wildlife Watching</h3>
+          <p>A single page static site describing wildlife viewing spots around the Wellington region</p>
+          <p>Html, CSS</p>
+          <p>Github: <a href="https://github.com/kellymdev/kellymdev.github.io/tree/master/wildlife">Github repository</a></p>
+          <p>Visit the site: <a href="http://kellymdev.github.io/wildlife/">Wellington Wildlife Watching</a></p>
+        </div>
+      </section>
+
       <footer>
         <p>Copyright &copy; 2015 <a href="mailto:info@kellymunro.com">Kelly Munro</a>. Images displayed on this site may not be used without written permission.</p>
       </footer>
     </div>
-    <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-    <script src="js/app.js"></script>
+
   </body>
 </html>
