--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
       </section>
 
       <section class="site clearfix">
+        <a href="img/catstats.jpg">
+          <img src="img/catstats.jpg" alt="Cat Stats - Ruby on Rails">
+        </a>
+        <div class="site-description">
+          <h3>Cat Stats</h3>
+          <p>A cat record site. Cats can be added, viewed, edited and deleted.</p>
+          <p>Ruby on Rails, RSpec testing, Capybara testing</p>
+          <p>Github: <a href="https://github.com/kellymdev/cat_stats">Github repository</a></p>
+        </div>
+      </section>
+
+      <section class="site clearfix">
         <a href="img/wildlife.jpg">
           <img src="img/wildlife.jpg" alt="Wildlife site - Html, CSS, single page app">
         </a>
