Added Investor Info centre

--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
       </section>
 
       <section class="site clearfix">
+        <a href="img/investorinfo.jpg">
+          <img src="img/investorinfo.jpg" alt="Investor Info Centre - Javascript, Html">
+        </a>
+        <div class="site-description">
+          <h3>Investor Info Centre</h3>
+          <p>An investor information site for the ASX, NASDAQ and NYSE. The site makes three separate API calls to return financial information for the selected stock/share.</p>
+          <p>Javascript, Html, Jasmine testing</p>
+          <p>Github: <a href="https://github.com/kellymdev/investorinfo">Github repository</a></p>
+      </section>
+
+      <section class="site clearfix">
         <a href="img/acronyms.jpg">
           <img src="img/acronyms.jpg" alt="IT Acronyms - Ruby on Rails">
         </a>
