Added new wildlife site

--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
       </section>
 
       <section class="site clearfix">
+        <a href="img/wildlife-site.jpg">
+          <img src="img/wildlife-site.jpg" alt="Wildlife site - Javascript, jQuery, Ruby on Rails">
+        </a>
+        <div class="site-description">
+          <h3>Wildlife Watching</h3>
+          <p>A site describing wildlife viewing spots around the Wellington region and the species that can be viewed at each location, searchable by Location and Species.</p>
+          <p>Javascript, jQuery, Ruby on Rails (as an api), RSpec testing, Jasmine testing</p>
+          <p>Github: <a href="https://github.com/kellymdev/wildlife">Github repository</a></p>
+          <p>Visit the site: <a href="https://wildlifewatching.herokuapp.com/">Wildlife Watching</a></p>
+        </div>
+      </section>
+
+      <section class="site clearfix">
         <a href="img/investorinfo.jpg">
           <img src="img/investorinfo.jpg" alt="Investor Info Centre - Javascript, Html">
         </a>
@@ -62,19 +75,6 @@
           <p>A cat record site. Cats can be added, viewed, edited and deleted.</p>
           <p>Ruby on Rails, RSpec testing, Capybara testing</p>
           <p>Github: <a href="https://github.com/kellymdev/cat_stats">Github repository</a></p>
-        </div>
-      </section>
-
-      <section class="site clearfix">
-        <a href="img/wildlife.jpg">
-          <img src="img/wildlife.jpg" alt="Wildlife site - Html, CSS, single page app">
-        </a>
-        <div class="site-description">
-          <h3>Wellington Wildlife Watching</h3>
-          <p>A single page static site describing wildlife viewing spots around the Wellington region</p>
-          <p>Html, CSS</p>
-          <p>Github: <a href="https://github.com/kellymdev/kellymdev.github.io/tree/master/wildlife">Github repository</a></p>
-          <p>Visit the site: <a href="http://kellymdev.github.io/wildlife/">Wellington Wildlife Watching</a></p>
         </div>
       </section>
 
