Add pet names site

--- a/index.html
+++ b/index.html
@@ -43,6 +43,19 @@
       </section>
 
       <section class="site clearfix">
+        <a href="img/petnames.png">
+          <img src="img/petnames.png" alt="Pet Names Site - Javascript, jQuery, Ruby on Rails">
+        </a>
+        <div class="site-description">
+          <h3>Pet Names</h3>
+          <p>A searchable collection of pet names and their meanings. Names are grouped alphabetically, by colour and by meaning. Random names can also be viewed.</p>
+          <p>Javascript, jQuery, Ruby on Rails (as an api), RSpec testing, Jasmine testing</p>
+          <p>Github: <a href="https://github.com/kellymdev/petnames">Github repository</a></p>
+          <p>Visit the site: <a href="https://petnames.herokuapp.com/">Pet Names</a></p>
+        </div>
+      </section>
+
+      <section class="site clearfix">
         <a href="img/investorinfo.jpg">
           <img src="img/investorinfo.jpg" alt="Investor Info Centre - Javascript, Html">
         </a>
