Updated Wildlife Watching site description

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="site-description">
           <h3>Wildlife Watching</h3>
           <p>A site describing wildlife viewing spots around the Wellington region and the species that can be viewed at each location, searchable by Location and Species. The site integrates with the Google Maps api to provide a map for each location.</p>
-          <p>Javascript, jQuery, Ruby on Rails (as an api), RSpec testing, Jasmine testing</p>
+          <p>Javascript, jQuery, Ruby on Rails, RSpec testing, Jasmine testing</p>
           <p>Github: <a href="https://github.com/kellymdev/wildlife">Github repository</a></p>
           <p>Visit the site: <a href="https://wildlifewatching.herokuapp.com/">Wildlife Watching</a></p>
         </div>
