--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div id="content">
       <section class="site clearfix">
         <a href="img/photography-site.jpg">
-          <img src="img/photography-site.jpg" alt="Photography site - Javascript, jQuery, jQuery UI, Ruby on Rails">
+          <img src="img/photography-site.jpg" alt="Photography site - Javascript, jQuery, Ruby on Rails">
         </a>
         <div class="site-description">
           <h3>Kelly Munro Photography</h3>
-          <p>An interactive photography portfolio site</p>
-          <p>Javascript, jQuery, jQuery UI, Ruby on Rails, RSpec testing, Jasmine testing</p>
+          <p>A photography portfolio site</p>
+          <p>Javascript, jQuery, Ruby on Rails, RSpec testing, Jasmine testing</p>
           <p>Github: <a href="https://github.com/kellymdev/photo-site">Github repository</a></p>
           <p>Visit the site: <a href="http://www.kellymunro.com">Kelly Munro Photography</a></p>
         </div>
