Minor updates to wording

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <h1>Kelly Munro Photography</h1>
-      <h2>Nature | Wildlife | Landscape</h2>
+      <h2>Nature | Landscape | Wildlife</h2>
     </header>
 
     <div id="content">
